Created:  - Add TodoItem-View Modified:  - Configured router.js -> added new Stack called "TodoItemStack" for adding/modifying single TodoItems.  - Changed react-native-element/vectors from "beta" to "0.19.1" and "4.2.0"
Additional Info:
 - Followed some sort of a styleguide for better code review and code understanding.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-gesture-handler')
+    compile project(':react-native-firebase')
     implementation project(':react-native-firebase')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
