--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "jest-serializer": "^23.0.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
-    "react-native-elements": "^1.0.0-beta7",
+    "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.12",
-    "react-native-vector-icons": "^6.1.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^3.0.8",
     "redux": "^4.0.1"
   },
